--- a/xgboost_customer_churn_SDK-1.ipynb
+++ b/xgboost_customer_churn_SDK-1.ipynb
@@ -1344,10 +1344,10 @@
     "    if column != 'Churn?':\n",
     "        display(pd.crosstab(index=churn[column], columns=churn['Churn?'], normalize='columns'))\n",
     "\n",
-    "# for column in churn.select_dtypes(exclude=['object']).columns:\n",
-    "#     print(column)\n",
-    "#     hist = churn[[column, 'Churn?']].hist(by='Churn?', bins=30)\n",
-    "#     plt.show()"
+    "for column in churn.select_dtypes(exclude=['object']).columns:\n",
+    "    print(column)\n",
+    "    hist = churn[[column, 'Churn?']].hist(by='Churn?', bins=30)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1406,11 +1406,7 @@
     }
    ],
    "source": [
-    "# display(churn.corr())\n",
-    "# pd.plotting.scatter_matrix(churn, figsize=(12, 12))\n",
-    "# plt.show()\n",
-    "\n",
-    "sns.pairplot(churn)"
+    "sns.pairplot(churn, corner=True, diag_kind=\"kde\")"
    ]
   },
   {
