--- a/xgboost_customer_churn_SDK-1.ipynb
+++ b/xgboost_customer_churn_SDK-1.ipynb
@@ -25,8 +25,8 @@
     }
    ],
    "source": [
-    "!{sys.executable} -m pip install sagemaker==1.72.0 -U -q\n",
-    "!{sys.executable} -m pip install seaborn -q"
+    "!python -m pip install sagemaker==1.72.0 -U -q\n",
+    "!python -m pip install seaborn -q"
    ]
   },
   {
